[package]
name = "eventdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
tokio = { version = "1.21.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
